Fix(#3560): Vertical Alignment of error message

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -273,6 +273,11 @@
   margin-bottom: 10px;
   padding: 15px;
 
+  ul {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+  }
+
   li {
     text-align: left;
   }
